Fixed footer overlapping

--- a/src/CoreBlog.Web/wwwroot/css/site.css
+++ b/src/CoreBlog.Web/wwwroot/css/site.css
@@ -58,7 +58,7 @@ body {
   position: relative;
   margin: 0;
   overflow:auto;
-  padding-bottom: 7rem;
+  padding-bottom: 10rem;
   min-height: 100%;
   padding-left:50px;
   padding-right:50px;
